# wasm-operator-rework

./: .gitignore  Dockerfile  GEMINI.md  README.md  devshell.toml  flake.nix
benchmark/: README.md  benchmark.sh  generated-manifests.yaml  requirements.txt  run_all_benchmarks.sh  run_benchmark_scenario.sh  setup-kind-cluster.sh  test_driver.py  test_driver_bare_metal.py  test_driver_bare_metal_go.py  visualize.py
benchmark/k8s/: deployment.yaml  rbac.yaml  testresource-crd.yaml
benchmark/operators/go-operator/: compile.sh  main.go
benchmark/operators/go-operator-bare-metal/: Dockerfile  compile.sh  generate-manifests.sh  go.mod  main.go
benchmark/operators/go-operator-bare-metal/k8s/: deployment.yaml.template
benchmark/operators/rust-operator/: Cargo.toml  compile.sh
benchmark/operators/rust-operator-bare-metal/: Cargo.toml  Dockerfile  README.md  compile.sh  generate-manifests.sh
benchmark/operators/rust-operator-bare-metal/k8s/: crd.yaml  deployment.yaml  deployment.yaml.template  rbac.yaml
benchmark/operators/rust-operator-bare-metal/src/: main.rs
benchmark/operators/rust-operator/src/: lib.rs
benchmark/prometheus/: prometheus-deployment.yaml
children/go/debug/: README.md
children/go/debug/hellokubernetes/: go.mod  main.go  wit
children/go/debug/helloworld/: README.md  hello.go
children/go/debug/ring-operator/: go.mod  main.go
children/rust/debug/ring-operator/: Cargo.toml  build.sh  wit
children/rust/debug/ring-operator/src/: lib.rs
docs/: contributing.md  wasmtime.md
examples/debug/hellokubernetes/: README.md  configuration.yaml  k8s-requests.yaml  run.sh
examples/debug/helloworld/: README.md  helloworld.yaml  run.sh
examples/debug/kubernetes/: README.md  configuration.yaml  run.sh
examples/debug/ring-operators/: README.md  configuration.yaml  crd.yaml  run.sh
examples/debug/stateful-operator/: configuration.yaml  run.sh
examples/helloworld/: README.md  run.sh
examples/kubernetes/: run.sh
examples/ring-benchmark/: README.md  configuration.yaml  deployment.yaml  rbac.yaml  run.sh
examples/ring-benchmark/crd/: rings.example.com.crd.yaml
examples/ring-benchmark/go-operator/: compile.sh  go.mod  main.go  tools.go
examples/ring-benchmark/rust-operator/: Cargo.toml  compile.sh
examples/ring-benchmark/rust-operator/src/: lib.rs
parent/: Cargo.toml
parent-controller/: Cargo.toml
parent/src/: main.rs  runtime.rs
parent/src/config/: metadata.rs  mod.rs
parent/src/host/: api.rs  mod.rs  state.rs
parent/src/kubernetes/: mod.rs
parent/src/runtime/: instance.rs  mod.rs  wasm.rs
parent/wit/: kubernetes.wit  operator.wit  types.wit  world.wit
wit/: main.wit
(+147 files in other folders)
