[package]
name = "parent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = "1.0"
serde_yml = "0.0.12"
tokio = "1.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.2.0"
hyper-util = "0.1.11"
tower = "0.5.1"
tower-http = "0.6.1"
serde_json = "1.0.140"
