[package]
name = "rust-operator-bare-metal"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.87.0", features = ["runtime", "derive"] }
kube-derive = "0.87.0"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
schemars = "0.8.16"
tracing = "0.1"
tracing-subscriber = "0.3"